--- a/apps/half-life-2/CMakeLists.txt
+++ b/apps/half-life-2/CMakeLists.txt
@@ -12,13 +12,13 @@ set(WB_HALF_LIFE2_TARGET_NAME  "half-life-2")
 
 set(WB_HALF_LIFE2_LINK_OPTIONS "")
 
-set(WB_HALF_LIFE2_LINK_DEPS fmt g3log mimalloc)
+set(WB_HALF_LIFE2_LINK_DEPS base fmt g3log mimalloc whitebox-ui)
 if (WB_OS_WIN)
   # _com_ptr_t support.
   list(APPEND WB_HALF_LIFE2_LINK_DEPS "comsuppw")
 elseif (WB_OS_LINUX)
   # dlopen, filesystem.
-  list(APPEND WB_HALF_LIFE2_LINK_DEPS "dl;stdc++fs;whitebox-ui")
+  list(APPEND WB_HALF_LIFE2_LINK_DEPS "dl;stdc++fs")
 endif()
 
 set(WB_HALF_LIFE2_RUNTIME_DEPS
