--- a/whitebox-kernel/CMakeLists.txt
+++ b/whitebox-kernel/CMakeLists.txt
@@ -12,7 +12,8 @@ set(WB_WHITEBOX_KERNEL_TARGET_NAME  "whitebox-kernel")
 
 set(WB_WHITEBOX_KERNEL_LINK_OPTIONS "")
 set(WB_WHITEBOX_KERNEL_LINK_DEPS
-  base fmt g3log mimalloc whitebox-hid-driver whitebox-ui)
+  fmt g3log mimalloc
+  wb::whitebox-base wb::whitebox-hid-driver wb::whitebox-ui)
 if (WB_OS_WIN)
   list(APPEND WB_WHITEBOX_KERNEL_LINK_DEPS Dwmapi)
 else ()
@@ -20,7 +21,8 @@ else ()
 endif ()
 
 set(WB_WHITEBOX_KERNEL_RUNTIME_DEPS
-  base g3log mimalloc whitebox-hid-driver whitebox-ui)
+  g3log mimalloc
+  wb::whitebox-base wb::whitebox-hid-driver wb::whitebox-ui)
 if (NOT WB_OS_WIN)
   list(APPEND WB_WHITEBOX_KERNEL_RUNTIME_DEPS "SDL2::SDL2" "SDL2::image")
 endif ()
