--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -10,13 +10,13 @@ on:
   push:
     branches: [ master ]
     paths-ignore:
-      - '**.md'
+      - '**/*.md'
       - 'assets/**'
 
   pull_request:
     branches: [ master ]
     paths-ignore:
-      - '**.md'
+      - '**/*.md'
       - 'assets/**'
 
 env:
@@ -96,18 +96,33 @@ jobs:
 
       - name: Configure (MacOS)
         if: ${{ matrix.os == 'macos-latest' }}
-        run: cmake -B ${{ github.workspace }}/out -Wdev -Werror=dev -DADD_FATAL_EXAMPLE=OFF -DCMAKE_EXPORT_COMPILE_COMMANDS=ON -DCHANGE_G3LOG_DEBUG_TO_DBUG=ON -Dgtest_hide_internal_symbols=ON -DINSTALL_GTEST=OFF -DMI_BUILD_OBJECT=OFF -DMI_BUILD_STATIC=ON -DMI_BUILD_TESTS=ON -DMI_SECURE=ON -DWB_BUILD_TESTS=ON -DWB_CLANG_LANGUAGE_VERSION="c++20" -DWB_CLANG_LINKER_TYPE="ld"
+        run: |
+          cmake -B ${{ github.workspace }}/out -Wdev -Werror=dev \
+          -DADD_FATAL_EXAMPLE=OFF -DCMAKE_EXPORT_COMPILE_COMMANDS=ON \
+          -DCHANGE_G3LOG_DEBUG_TO_DBUG=ON -Dgtest_hide_internal_symbols=ON \
+          -DINSTALL_GTEST=OFF -DMI_BUILD_OBJECT=OFF -DMI_BUILD_STATIC=ON \
+          -DMI_BUILD_TESTS=ON -DMI_SECURE=ON -DWB_BUILD_TESTS=ON \
+          -DWB_CLANG_LANGUAGE_VERSION="c++20" -DWB_CLANG_LINKER_TYPE="ld"
 
       - name: Configure (Ubuntu)
         if: ${{ matrix.os == 'ubuntu-latest' }}
-        run: cmake -B ${{ github.workspace }}/out -Wdev -Werror=dev -DADD_FATAL_EXAMPLE=OFF -DCMAKE_EXPORT_COMPILE_COMMANDS=ON -DCHANGE_G3LOG_DEBUG_TO_DBUG=ON -Dgtest_hide_internal_symbols=ON -DINSTALL_GTEST=OFF -DMI_BUILD_OBJECT=OFF -DMI_BUILD_STATIC=ON -DMI_BUILD_TESTS=ON -DMI_SECURE=ON -DWB_BUILD_TESTS=ON -DWB_CLANG_LANGUAGE_VERSION="c++20" -DWB_GCC_LANGUAGE_VERSION="c++20" -DWB_GCC_ENABLE_WARNING_WUNDEF=OFF
+        run: |
+          cmake -B ${{ github.workspace }}/out -Wdev -Werror=dev \
+          -DADD_FATAL_EXAMPLE=OFF -DCMAKE_EXPORT_COMPILE_COMMANDS=ON \
+          -DCHANGE_G3LOG_DEBUG_TO_DBUG=ON -Dgtest_hide_internal_symbols=ON \
+          -DINSTALL_GTEST=OFF -DMI_BUILD_OBJECT=OFF -DMI_BUILD_STATIC=ON \
+          -DMI_BUILD_TESTS=ON -DMI_SECURE=ON -DWB_BUILD_TESTS=ON \
+          -DWB_CLANG_LANGUAGE_VERSION="c++20" -DWB_GCC_LANGUAGE_VERSION="c++20" \
+          -DWB_GCC_ENABLE_WARNING_WUNDEF=OFF
 
       - name: Configure (Windows)
         if: ${{ matrix.os == 'windows-latest' }}
-        run: cmake -B ${{ github.workspace }}\out -Wdev -Werror=dev -DADD_FATAL_EXAMPLE=OFF -DCMAKE_EXPORT_COMPILE_COMMANDS=ON -DCHANGE_G3LOG_DEBUG_TO_DBUG=ON -Dgtest_hide_internal_symbols=ON -DINSTALL_GTEST=OFF -DMI_BUILD_OBJECT=OFF -DMI_BUILD_STATIC=ON -DMI_BUILD_TESTS=ON -DMI_SECURE=ON -DWB_BUILD_TESTS=ON -DWB_MSVC_CXX_LANGUAGE_VERSION="c++latest" -DDEBUG_BREAK_AT_FATAL_SIGNAL=ON
+        run: |
+          cmake -B ${{ github.workspace }}\out -Wdev -Werror=dev -DADD_FATAL_EXAMPLE=OFF -DCMAKE_EXPORT_COMPILE_COMMANDS=ON -DCHANGE_G3LOG_DEBUG_TO_DBUG=ON -Dgtest_hide_internal_symbols=ON -DINSTALL_GTEST=OFF -DMI_BUILD_OBJECT=OFF -DMI_BUILD_STATIC=ON -DMI_BUILD_TESTS=ON -DMI_SECURE=ON -DWB_BUILD_TESTS=ON -DWB_MSVC_CXX_LANGUAGE_VERSION="c++latest" -DDEBUG_BREAK_AT_FATAL_SIGNAL=ON
 
       - name: Build
-        run: cmake --build ${{ github.workspace }}/out --config ${{ matrix.build }} --parallel
+        run: |
+          cmake --build ${{ github.workspace }}/out --config ${{ matrix.build }} --parallel
 
       - name: Test
         working-directory: ${{ github.workspace }}/out
