--- a/whitebox-boot-manager/CMakeLists.txt
+++ b/whitebox-boot-manager/CMakeLists.txt
@@ -16,11 +16,11 @@ set(WB_BOOTMGR_LINK_DEPS g3log mimalloc wb::whitebox-base wb::whitebox-ui)
 if (WB_OS_WIN)
   list(APPEND WB_BOOTMGR_LINK_DEPS "Winmm")
 elseif (WB_OS_LINUX)
-  # dlopen, filesystem.
-  list(APPEND WB_BOOTMGR_LINK_DEPS "dl;stdc++fs")
+  # dlopen, shm_open, filesystem.
+  list(APPEND WB_BOOTMGR_LINK_DEPS "dl;rt;stdc++fs")
 elseif (WB_OS_MACOS)
-  # dlopen, filesystem.
-  list(APPEND WB_BOOTMGR_LINK_DEPS "dl;c++fs")
+  # dlopen, shm_open, filesystem.
+  list(APPEND WB_BOOTMGR_LINK_DEPS "dl;rt;c++fs")
 endif()
 
 set(WB_BOOTMGR_RUNTIME_DEPS g3log mimalloc
