[cmake] Format link/runtime deps

--- a/base/CMakeLists.txt
+++ b/base/CMakeLists.txt
@@ -11,8 +11,13 @@ set(WB_BASE_BINARY_DIR ${CMAKE_CURRENT_BINARY_DIR})
 set(WB_BASE_TARGET_NAME "whitebox-base")
 
 set(WB_BASE_LINK_OPTIONS "")
-set(WB_BASE_LINK_DEPS fmt g3log mimalloc)
-set(WB_BASE_RUNTIME_DEPS g3log mimalloc)
+set(WB_BASE_LINK_DEPS
+  fmt
+  g3log
+  mimalloc)
+set(WB_BASE_RUNTIME_DEPS
+  g3log
+  mimalloc)
 set(WB_BASE_CXX_DEFINITIONS WB_BASE_DLL=1)
 
 if (WB_OS_WIN)
